@@ -1,3 +1,9 @@
+                CHANGES in TimeWarp version 1.0-3 (2011-12-21)
+CHANGES
+    o   make dateSeq() return zero length sequence when given
+        start and end dates that align to be zero length, rather
+        than stopping with an error.
+
                 CHANGES in TimeWarp version 1.0-2 (2011-12-19)
 CHANGES
     o   dateFormat() dynamically figures out if the system needs
